# Craite

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  CICD.md  CLAUDE.md  Dockerfile  README.md  TODO.md  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts  vitest.config.ts
.claude/commands/: apex.md  audit.md  commit.md  debug.md  dry.md  issue.md  module-doc.md  mr-desc.md  oneshot.md  patchnote.md  rapport.md
.github/: dependabot.yml
.github/workflows/: build-desktop.yml  build-windows.yml  ci.yml  release-please.yml  release.yml  test.yml  upload-s3.yml
apps/desktop/: README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  vite.config.ts
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: ARCHITECTURE.md  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/audio/: preview.rs
apps/desktop/src-tauri/src/background/: scanner.rs  state.rs
apps/desktop/src-tauri/src/classifier/: audio.rs  context.rs  engine.rs  filename.rs  fusion.rs  mod.rs  path.rs  rules.rs
apps/desktop/src-tauri/src/commands/: background.rs  classify.rs  daw.rs  mod.rs  persistence.rs  scan.rs  updater.rs  watcher.rs
apps/desktop/src-tauri/src/db/: connection.rs  models.rs  repository.rs
apps/desktop/src-tauri/src/linker/: strategy.rs
apps/desktop/src-tauri/src/scanner/: daw_detection.rs  filesystem.rs  mod.rs  source_paths.rs  wsl.rs
apps/desktop/src-tauri/src/security/: path_validator.rs
apps/desktop/src-tauri/src/tray/: builder.rs  events.rs
apps/desktop/src-tauri/src/watcher/: handler.rs
apps/landing/: app.config.ts  nuxt.config.ts  package.json  tsconfig.json  vanta.d.ts
apps/landing/composables/: useGithubRelease.ts  useRelease.ts  useTrack.ts
apps/landing/pages/: index.vue  privacy.vue
apps/landing/plugins/: posthog.client.ts
docs/: CI.md  CICD.md  DESIGN.md  ROADMAP.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/classifier/: filename.rs  rules.rs
src-tauri/src/commands/: classify.rs  mod.rs  scan.rs
src-tauri/src/db/: connection.rs  models.rs
src-tauri/src/linker/: strategy.rs
src-tauri/src/scanner/: filesystem.rs  splice_db.rs
src-tauri/src/watcher/: handler.rs
src/components/: UpdateNotification.vue
src/composables/: useOnboarding.ts  useTauri.ts
src/stores/: scan.ts
src/types/: onboarding.ts  sample.ts
src/views/: LibraryView.vue  OnboardingView.vue
(+71 files in other folders)
